Add section on world model capabilities and techniques

--- a/世界模型.md
+++ b/世界模型.md
@@ -1,1 +1,18 @@
+## 世界模型（除 MBRL 中的 world model）
 
+#### 目的
+
+预测**干预**后的世界，并用于**规划决策**
+
+#### 能力
+
+- 状态表示
+- 干预预测
+- 反事实推演
+- 不确定性建模
+
+#### 技术路线
+
+- 视频生成模型
+- 3D 重建/生成模型
+- 抽象表征
