Update 世界模型.md with new sections and details

--- a/世界模型.md
+++ b/世界模型.md
@@ -1,18 +1,68 @@
-## 非强化学习中的世界模型
+# 非强化学习中的世界模型
 
-#### 目的
+## 目的
 
 预测**干预**后的世界，并用于**规划决策**
 
-#### 能力
+## 能力
 
 - 状态表示
 - 干预预测
 - 反事实推演
 - 不确定性建模
 
-#### 技术路线
+## 技术路线
 
 - 视频生成模型
 - 3D 重建/生成模型
 - 抽象表征
+
+---
+
+# 强化学习中的世界模型 （MBRL）
+
+## 🅰️ 用法 1：直接在“脑子里”选动作（规划 / MPC）
+
+每一步决策时：
+
+- 先 **假设 / 采样** 很多种未来的动作序列（比如 100 种）
+- 对每一种动作序列：
+  - 用世界模型进行模拟（rollout）
+  - 预测：
+    - “如果我这样连续做 10 步，会发生什么？”
+    - “累计奖励有多少？”
+- 然后：
+  - 选择 **预测回报最高** 的那一条动作序列
+  - 但在真实世界中：**只执行这条序列的第一步**
+- 下一步：
+  - 重新观察真实世界
+  - 再重复上述过程（滚动优化）
+
+这类方法叫做：
+
+> **Planning / MPC（Model Predictive Control，模型预测控制）**
+
+## 🅱️ 用法 2：用世界模型生成“假数据”来训练策略（Dyna / Dreamer 风格）
+
+思路是：
+
+- 不必每一步都去和真实环境交互（因为真实环境很贵 / 很慢 / 很危险）
+- 而是：
+  - 利用已经学到的 **世界模型**
+  - 在“脑内”进行大量模拟（也可以理解为“做梦”）
+  - 生成很多 **虚拟轨迹 / 假数据**
+
+具体流程：
+
+- 从真实数据中：
+  - 采样一个起始状态
+- 然后：
+  - 用当前 policy + world model
+  - 在模型里 rollout 出很多步未来轨迹
+- 最后：
+  - 用这些 **模型生成的轨迹**
+  - 来更新 policy / value 网络
+
+这种范式叫：
+
+> **Dyna-style / Dreamer-style（基于想象数据训练策略）**
