Enhance MBRL explanation and workflow details
Expand on the concept of Model-Based Reinforcement Learning (MBRL) and its components, including the workflow and usage examples.

--- a/世界模型.md
+++ b/世界模型.md
@@ -21,7 +21,40 @@
 
 # 强化学习中的世界模型 （MBRL）
 
-## 🅰️ 用法 1：直接在“脑子里”选动作（规划 / MPC）
+MBRL（基于模型的强化学习）的核心思想是：
+
+> **先学习一个“世界模型（World Model）”，再用它来帮助做决策或训练策略。**
+
+## 🧱 一套典型的 MBRL 系统通常由以下几个模块组成：
+
+1. **环境（Environment）**（真实世界 / 模拟器）
+2. **数据收集模块（Data Collection）**
+3. **世界模型（World Model）**
+4. **规划器 / 想象器（Planner / Imagination）**
+5. **策略网络（Policy）**
+6. **价值网络（Value，可选）**
+7. **经验回放池（Replay Buffer）**
+
+## 🔁 工作流程（循环）
+
+```text
+真实环境
+   ↓
+采集数据 → Replay Buffer
+   ↓
+训练 World Model
+   ↓
+用 World Model:
+   - 要么做规划选动作
+   - 要么生成想象数据
+   ↓
+更新 Policy / Value
+   ↓
+再回到真实环境
+
+## 世界模型的用法
+
+#### 用法 1：直接在“脑子里”选动作（规划 / MPC）
 
 每一步决策时：
 
@@ -42,7 +75,7 @@
 
 > **Planning / MPC（Model Predictive Control，模型预测控制）**
 
-## 🅱️ 用法 2：用世界模型生成“假数据”来训练策略（Dyna / Dreamer 风格）
+#### 用法 2：用世界模型生成“假数据”来训练策略（Dyna / Dreamer 风格）
 
 思路是：
 
